--- a/test/fixtures/registrations.yml
+++ b/test/fixtures/registrations.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  users: one
-  events: one
+  user: one
+  event: one
   team_name: MyString
 
 two:
-  users: two
-  events: two
+  user: two
+  event: two
   team_name: MyString
