--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,15 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  name: MyString
-  contact: 1
-  college: MyText
-  admin: false
-  uid: 1
-
-two:
-  name: MyString
-  contact: 1
-  college: MyText
-  admin: false
-  uid: 1
+# This model initially had no columns defined. If you add columns to the
+# model remove the '{}' from the fixture names and add the columns immediately
+# below each fixture, per the syntax in the comments below
+#
+one: {}
+# column: value
+#
+two: {}
+# column: value
